# llm-jax

./: llm_lesson_1.py  llm_lesson_2.py  llm_lesson_4.py  llm_lesson_5.ipynb  llm_lesson_5.py  llm_lesson_6 concept2_add_attention.py  llm_lesson_6 concept3_add_possitional_encoding.py  llm_lesson_6.py  llm_lesson_6_bak.py  llm_lesson_6_concept4_add_jit.py  pyproject.toml  requirements.txt  setup.sh  start_jupyter.sh  test.py  timming-01.py  timming-02.py
